# amisr-system-monitor

./: README.md
v1/: sitecmd
v1/devel/backend/: CHANGES  LICENSE  pyproject.toml
v1/devel/backend/src/server/: metadata.py
v1/devel/backend/src/server/migrations/versions/: 0204d5a84073_initial.py
v1/devel/frontend/: .env  package-lock.json  package.json
v2/: profile
v2/devel/backend/: CHANGES  LICENSE  pyproject.toml
v2/devel/backend/src/server/: __init__.py  config.py  metadata.py  model.py
v2/devel/backend/src/server/migrations/: env.py
v2/devel/backend/src/server/migrations/versions/: 980cbc7ebc62_initial.py
v2/devel/backend/src/server/routes/: aeustatus.py  api.py  array_xml.py  database.py  websocket.py
v2/devel/frontend/: .env  package-lock.json  package.json
v2/devel/frontend/src/: program.jsx
v2/devel/frontend/src/app/: app.jsx  header.jsx  layout.jsx  layout.module.css  navbar.jsx  navbar.module.css
v2/devel/frontend/src/app/pages/: index.js
v2/devel/frontend/src/app/pages/dashboard/: amisr_toolkit.js  arraychart.jsx  arraychart_d3.jsx  arraychart_react.jsx  dashboard.jsx  dashboard.module.css  demo.jsx  ex1.jsx  linechart_d3.js  linechart_react.js
v2/devel/frontend/src/app/pages/pmcu/: index.js  pmcu.jsx
v2/devel/frontend/src/contexts/: index.js  socket.context.js  socket.provider.jsx
v2/devel/frontend/src/services/: api.service.js
